# plumax

./: .env.example  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  release-please-config.json
.github/: copilot-instructions.md
.github/workflows/: typecheck.yml
api/reference/: index.html
changelog/: index.html
design/: index.html
design/00_prerequisites/: index.html
design/01_tier1_gaussian/: index.html
design/02_tier2_lagrangian/: index.html
design/03_tier3_eulerian/: index.html
design/04_rtm_stack/: index.html
design/05_tier4_coupled/: index.html
design/06_tier5_population/: index.html
design/06a_instantaneous/: index.html
design/06b_point_process/: index.html
design/06c_persistency/: index.html
design/06d_total_emission/: index.html
docs/: index.md
docs/api/: reference.md
docs/design/: 00_prerequisites.md  01_tier1_gaussian.md  02_tier2_lagrangian.md  03_tier3_eulerian.md  04_rtm_stack.md  05_tier4_coupled.md  06_tier5_population.md  06a_instantaneous.md  06b_point_process.md  06c_persistency.md  06d_total_emission.md  index.md
notebooks/example_demo/: index.html
search/: search_index.json
src/plumax/: __init__.py  adapters.py  operators.py
src/plumax/assimilation/: __init__.py  background.py  control.py  cost.py  diagnostics.py  obs_operator.py  solve.py
src/plumax/coupled/: __init__.py  forward.py  fusion.py  instrument.py  rtm.py
src/plumax/gauss_plume/: __init__.py  dispersion.py  inference.py  plume.py
src/plumax/gauss_puff/: __init__.py  dispersion.py  inference.py  puff.py  turbulence.py  wind.py
src/plumax/hapi_lut/: __init__.py  beers.py  config.py  generator.py  multi.py
src/plumax/lagrangian/: __init__.py  concentration.py  footprint.py  inversion.py  particles.py  turbulence.py
src/plumax/les_fvm/: __init__.py  advection.py  boundary.py  diffusion.py  dynamics.py  fourdvar.py  grid.py  simulate.py  source.py  wind.py
src/plumax/matched_filter/: __init__.py  background.py  cluster.py  core.py  io.py  streaming.py  target.py
src/plumax/population/: __init__.py  catalog.py  point_process.py  size_distribution.py
src/plumax/radtran/: __init__.py  background.py  config.py  forward.py  gaussx_solve.py  instrument.py  matched_filter.py  nb_lut.py  srf.py  target.py
tests/: conftest.py  test_adapters.py  test_operators.py  test_plumax.py
tests/assimilation/: conftest.py  test_background.py  test_control.py  test_cost.py  test_diagnostics.py  test_solve.py
tests/coupled/: test_coupled.py  test_rtm.py
tests/gauss_plume/: test_dispersion.py  test_inference.py  test_plume.py
tests/gauss_puff/: test_dispersion.py  test_inference.py  test_puff.py  test_turbulence.py  test_wind.py
tests/hapi_lut/: test_beers.py  test_config.py  test_generator.py  test_multi.py
tests/lagrangian/: test_concentration.py  test_footprint.py  test_inversion.py  test_operator.py  test_particles.py  test_turbulence.py
tests/les_fvm/: test_advection.py  test_boundary.py  test_diffusion.py  test_fourdvar.py  test_grid.py  test_simulate.py  test_source.py  test_vertical_ops.py  test_wind.py
tests/matched_filter/: test_background.py  test_cluster.py  test_core.py  test_integration.py  test_io.py  test_streaming.py  test_target.py
tests/population/: test_catalog.py  test_point_process.py  test_size_distribution.py
tests/radtran/: conftest.py  test_background.py  test_config.py  test_forward.py  test_gaussx_solve.py  test_instrument.py  test_matched_filter.py  test_nb_lut.py  test_srf.py  test_target.py
